# LLM_ackermann_robot

./: README.md
ackermann_v2/: CMakeLists.txt  Dockerfile  build_docker.sh  package.xml  run_docker.sh
ackermann_v2/config/: gz_ros2_control.yaml  parameters.yaml  ros_gz_bridge.yaml
ackermann_v2/include/: joystick_controller.hpp
ackermann_v2/launch/: joystick.launch.py  vehicle.launch.py
ackermann_v2/model/: vehicle.xacro
ackermann_v2/rviz/: rviz.rviz
ackermann_v2/src/: joystick_controller.cpp
api_invocation/: CMakeLists.txt  README_LLM_ANALYZER.md  package.xml
api_invocation/config/: llm_params.yaml  voice_asr_params.yaml
api_invocation/launch/: gazebo_simulation.launch.py  llm_navigation.launch.py
api_invocation/src/: advanced_executor.cpp  ground_truth_odom.cpp  image_viewer.cpp  llm_analyze.cpp  model_state_publisher.cpp  odom_to_tf.cpp  plot_point.py  simple_executor.cpp  test_publisher.cpp  voice_input.cpp  voice_input_asr.cpp
br2_gazebo_worlds/: CMakeLists.txt  README.md  package.xml
br2_gazebo_worlds/launch/: br2_gazebo.launch.py  house_with_robot.launch.py
br2_gazebo_worlds/worlds/: empty.world  follow_line.world  house.world  house_pick_and_place.world  pick_and_place.world
